# homey-pythonscript

./: .gitignore  .homeychangelog.json  .homeyignore  FINDINGS.md  LICENSE  README.md  README.txt  api.py  app.json  app.py  pyproject.toml  test_debug.py
.gitea/workflows/: ci.yml
.homeycompose/flow/actions/: run_named_script.json  run_named_script_with_argument.json  run_script.json  run_script_with_argument.json
.homeycompose/flow/triggers/: python_triggered.json
docs/superpowers/plans/: 2026-06-12-homey-pythonscript.md  2026-07-07-v0.2.0-named-scripts.md
docs/superpowers/specs/: 2026-06-12-homey-pythonscript-design.md
pythonscript/: executor.py  homey_context.py  runner.py  sandbox.py  script_manager.py  script_wrapper.py  venv_manager.py
scripts/: ci_review.py  refresh_homey_token.py
settings/: index.html
tests/: conftest.py  test_api.py  test_executor.py  test_homey_context.py  test_named_cards.py  test_runner.py  test_runner_sandbox.py  test_sandbox.py  test_script_manager.py  test_script_wrapper.py  test_venv_manager.py
tests/integration/: conftest.py  test_devices.py  test_logic.py  test_smoke.py
