[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homey-pythonscript"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["restrictedpython>=7.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["pythonscript"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires live SHS (run with -m integration)",
]

[tool.ruff.lint.per-file-ignores]
# app.py injects bundled venv into sys.path before third-party imports
"app.py" = ["E402"]
